Tema1/tests/tema1/06-arithmetic.out
class : CLASS
A : TYPE
{ : LBRACE
n : ID
: : COLON
Int : TYPE
<- : ASSIGN
1 : INT
+ : PLUS
2 : INT
* : MULT
( : LPAREN
3 : INT
+ : PLUS
4 : INT
) : RPAREN
/ : DIV
( : LPAREN
5 : INT
- : MINUS
~ : NEG
6 : INT
) : RPAREN
; : SEMI
} : RBRACE
; : SEMI
<EOF> : EOF
"06-arithmetic.cl", line 1:1, Syntax error: mismatched input 'class' expecting <EOF>
Compilation halted
